018 ==> 379038 - Camera date Tool-Tip Option Appears Ineffective.
019 ==> 378625 - Very slow start.
020 ==> 379152 - Presentation mode cannot be exited/quitted.
021 ==> 374838 - Advanced Search not finding "Not Tagged" images.
022 ==> 379326 - Import-Tool doesn't rename properly.
023 ==> 379442 - AppImage package does not find the files needed for panorama.
024 ==> 379226 - digiKam Properties Metadata not shown in Editor Captions.
025 ==> 216359 - New "floating cards" theme for html gallery [patch].
026 ==> 319606 - New "SimpleRounded" theme for html gallery [patch].
027 ==> 334589 - New "blue with curves" theme for html gallery [patch].
028 ==> 379526 - Inconsistent separator use in mime setup.
029 ==> 156900 - Allow to use selected images instead full album contents in html gallery.
030 ==> 373247 - No chronological ordering of tags anymore.
031 ==> 379675 - Geolocation feature links to Multimap.com and MSN Maps.
032 ==> 140177 - HTML export plugin should autorotate images.
033 ==> 378855 - Crashes on startup.
034 ==> 379751 - I18N_ARGUMENT_MISSING in Edit Metadata.
035 ==> 377197 - Customize grouping behaviour
036 ==> 286609 - Allow to manage images group to stitch images in a panorama
037 ==> 378552 - Problem with grouped images
038 ==> 193232 - Add advanced input side-car files support (as .pto, .pp2, .pp3, .pano, thm, etc...)
038 ==> 379806 - ShowFoto crashes when clicking Color Effects from menu.
039 ==> 376407 - Edit Bookmarks... Doesn't Do Anything.
040 ==> 376391 - Add geolocation favorites to menu and shortcuts.
041 ==> 376687 - GPS tagging usability of bookmarks.
042 ==> 374710 - No dialogue opening on edit bookmarks in geolocation editor.
043 ==> 376074 - Display-bookmarked-positions-on-the-map button doesn't work.
044 ==> 288113 - Bookmark a GPS position is impossible.
045 ==> 374841 - Geolocation Editor Cannot Edit Bookmarks.
046 ==> 376251 - Number of photos in gallery
047 ==> 